fix micronaut security blocking control panel